# wh

./: .gitignore  Cargo.toml  build.rs  readme.md
.cargo/: config.toml
.github/chglog/: release.yml
.github/workflows/: main.yml
completions/: wh_completions.ps1
src/: _main_rs  app.rs  cmd.rs  main.rs  matcher.rs  non_win.rs  shell.rs  win.rs
