[package]
name = "wh"
description = "An extended alternative to GNU which"
version = "2.0.6"
authors = ["Taylan Gökkaya"]
include = [
	"src/*",
	"Cargo.toml",
	"Cargo.lock",
	"readme.md",
	"LICENSE",
]
edition = "2021"
repository = "https://github.com/insomnimus/wh"
keywords= ["cli", "tool"]
license= "MIT"
readme= "readme.md"

[profile.release]
lto = "thin"
panic = "abort"
opt-level = 2

[dependencies]
clap = { version = "4.2.4", features = ["derive"] }
globset = "0.4.10"
home = "0.5.4"

[target.'cfg(not(windows))'.dependencies]
atty = "0.2.14"
nom = "7.1.3"
whoami = "1.4.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.48.0", features = ["Win32_UI_Shell", "Win32_Foundation"] }
