[package]
name = "wh"
description = "An extended alternative to GNU which"
version = "2.0.8"
authors = ["Taylan Gökkaya"]
edition = "2021"
repository = "https://github.com/insomnimus/wh"
keywords= ["cli", "tool"]
license= "MIT"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 2
strip = "symbols"

[dependencies]
clap = { version = "4.4.12", features = ["derive"] }
globset = "0.4.14"
home = "0.5.9"

[target.'cfg(not(windows))'.dependencies]
atty = "0.2.14"
nom = "7.1.3"
whoami = "1.4.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52.0", features = ["Win32_UI_Shell", "Win32_Foundation"] }
