[package]
name = "wh"
description = "An extended alternative to GNU which"
version = "2.1.0"
authors = ["Taylan Gökkaya"]
edition = "2021"
repository = "https://github.com/insomnimus/wh"
keywords= ["cli", "tool"]
license= "MIT"
rust-version = "1.70.0"

[profile.release]
lto = "fat"
panic = "abort"
opt-level = 2
strip = "symbols"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
globset = "0.4.14"
home = "0.5.9"

[target.'cfg(not(windows))'.dependencies]
nom = "7.1.3"
whoami = "1.5.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.56.0", features = ["Win32_UI_Shell", "Win32_Foundation"] }
